<resources>
    <string name="app_name">SplashScreenDemo</string>
    <string name="you_are_awesome">You are awesome!</string>
    <string name="title_activity_home" translatable="false">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name </string>
    <string name="age">Age </string>
    <string name="save">Save</string>
    <string name="student_checkboxStudent" />
    <string name="student_checkbox">Student</string>
    <string name="empty_msg">Can\'t be empty</string>
    <string name="invalid_age">Invalid age</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout ?</string>
    <string name="logout_title">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="brand">Brand:</string>
    <string name="packed">"Packed:"</string>
    <string name="ltr">"ltr"</string>
    <string name="mvvm">MVVM</string>
    <string name="mvp">MVP</string>
    <string name="mvc">MVC</string>
    <string name="mvvm_data_binding">MVVM Data Binding</string>
    <string name="title_activity_mvp">MVP</string>
    <string name="title_activity_mvvm">MVVM</string>
    <string name="title_activity_data_binding">Data Binding</string>
</resources>